added route for about page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
 <h1> Denarri </h1>
 
 <p> This is the Denarri homepage. Will update this with content later :) </p>
+
+Also an about page:
+<a href='/about'>About</a>
