--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,15 +8,17 @@
 </head>
 <body>
 
-<ul id="nav-bar">
-	<li><a href='/'>Denarri</a></li>
-	<li><a href='/about'>About Us</a></li>
-	<li><a href='#'>How It Works</a></li>
-	<div class="pull-right">
-		<li><a href='#'>Log In</a></li>
-		<li><a href='#'>Sign Up</a></li>
-	</div>
-</ul>
+<div id='nav-bar'>
+	<ul>
+		<li><a href='/'>Denarri</a></li>
+		<li><a href='/about'>About Us</a></li>
+		<li><a href='#'>How It Works</a></li>
+		<div class="pull-right">
+			<li><a href='#'>Log In</a></li>
+			<li><a href='#'>Sign Up</a></li>
+		</div>
+	</ul>
+</div>
 
 <%= yield %>
 
