users index link to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
 <h1> Denarri </h1>
 
 <p> This is the Denarri homepage. Will update this with content later :) </p>
+
+<a href='/users/index'>Users Index</a>
