--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 	<ul>
 		<li><a href="/">Denarri</a></li>
 		<li><a href="/about">About Us</a></li>
-		<li><a href="#">How It Works</a></li>
+		<li><a href="/how">How It Works</a></li>
 		<div class="pull-right">
 			<% if user_signed_in? %>
 				<li><%= link_to "#{current_user.email}", users_show_path(:id => current_user.id) %></li>
