--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -4,11 +4,13 @@
 		<tr>
 			<th>Name</th>
 			<th>Email</th>
+			<th></th>
 		</tr>
 		<% @users.each do |user| %>
 			<tr>
 				<td><%= user.first_name + ' ' + user.last_name %></td>
 				<td><%= user.email %></td>
+				<td><%= link_to "Profile", users_show_path(:id => user.id) %></td>
 			</tr>
 		<% end %>
 	</table>
