--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
 <h1><%= @user.email %></h1>
 <p>Find me in app/views/users/show.html.erb</p>
-<p> Hello <%= full_name(@user) %>. This is where user profiles will be </p>
+<p> <%= full_name(@user) %>'s profile. This is where user profiles will be </p>
 <% if @user.id == current_user.id %>
 	<%= link_to "Edit My Profile", edit_user_registration_path %>
 <% end %>
 
 <h3>
 	<% if @user.admin? %>
-		You are an admin!
+		This user is an admin!
 	<% else %>
-		You are not an admin!
+		This user is not an admin!
 	<% end %>
 </h3>
