home page buttons? not completed but a basic start

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,3 +3,9 @@
 <p> This is the Denarri homepage. Will update this with content later :) </p>
 
 <a href='/users/index'>Users Index</a>
+
+<div class='centered'>
+	<a href='#' class='button home-button no-text-decoration'>Buy</a>
+	<a href='#' class='button home-button no-text-decoration'>Sell</a>
+	<a href='#' class='button home-button no-text-decoration'>Browse</a>
+</div>
