--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -24,6 +24,18 @@ ul {
 	background-color: red;
 }
 
+.no-text-decoration {
+	text-decoration: none;
+}
+
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin-top: -100px;
+  margin-left: -275px;
+}
+
 #nav-bar {
 	width: 100%;
 	font-size: 18px;
