--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -2,6 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+#home-page-header {
+	text-align: center;
+	margin-right: 120px;
+	margin-bottom: 50px;
+}
+
 .button {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 14px;
