--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,7 @@
-<h1> Denarri </h1>
-
-<p> This is the Denarri homepage. Will update this with content later :) </p>
-
 <a href='/users/index'>Users Index</a>
 
 <div class='centered'>
+	<h1 id='home-page-header'>Denarri</h1>
 	<a href='#' class='button home-button no-text-decoration'>Buy</a>
 	<a href='#' class='button home-button no-text-decoration'>Sell</a>
 	<a href='#' class='button home-button no-text-decoration'>Browse</a>
