more styling of the home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <a href='/users/index'>Users Index</a>
 
-<div class='centered'>
+<div id='home-page' class='centered'>
 	<h1 id='home-page-header'>Denarri</h1>
 	<a href='#' class='button home-button no-text-decoration'>Buy</a>
 	<a href='#' class='button home-button no-text-decoration'>Sell</a>
