--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -28,14 +28,6 @@ ul {
 	text-decoration: none;
 }
 
-.centered {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  margin-top: -140px;
-  margin-left: -275px;
-}
-
 #nav-bar {
 	width: 100%;
 	font-size: 18px;
@@ -48,4 +40,8 @@ ul {
 #nav-bar > ul li + li {
 	border-left: solid 2px black;
 	padding-left: 4px;
+}
+
+#nav-bar > ul li > a {
+	text-decoration: none;
 }
