added search bar to home page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,4 +5,7 @@
 	<a href='#' class='button home-button no-text-decoration'>Buy</a>
 	<a href='#' class='button home-button no-text-decoration'>Sell</a>
 	<a href='#' class='button home-button no-text-decoration'>Browse</a>
+	<form action="">
+		<input type="text" class="home-search" name="search" value="" placeholder="enter search term here..." />
+	</form>
 </div>
