--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -6,7 +6,7 @@
   position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -160px;
+  margin-top: -190px;
   margin-left: -275px;
 }
 
@@ -50,4 +50,27 @@
 .home-button {
 	padding: 20px 40px 20px 40px;
 	margin-right: 100px;
+}
+
+.home-search {
+	width: 84.5%;
+	height: 30px;
+	margin-top: 50px;
+	padding-left: 10px;
+	border: solid 0px #000000;
+	-moz-border-radius: 4px;
+	-webkit-border-radius: 4px;
+	border-radius: 4px;
+	-moz-box-shadow:
+		0px 1px 3px rgba(0,0,0,0.5),
+		inset 0px 0px 1px rgba(255,255,255,0.5);
+	-webkit-box-shadow:
+		0px 1px 3px rgba(0,0,0,0.5),
+		inset 0px 0px 1px rgba(255,255,255,0.5);
+	box-shadow:
+		0px 1px 3px rgba(0,0,0,0.5),
+		inset 0px 0px 1px rgba(255,255,255,0.5);
+	text-shadow:
+		0px -1px 0px rgba(255,255,255,0.7),
+		0px 1px 0px rgba(255,255,255,0.3);
 }
