--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,6 @@
 body {
 	font-family: Georgia, Serif;
+	background-color: #23BFDE;
 }
 
 ul {
@@ -31,6 +32,9 @@ ul {
 #nav-bar {
 	width: 100%;
 	font-size: 18px;
+	background-color: white;
+	padding: 10px 15px 10px 7px;
+	margin: -10px 0 0 -7px;
 }
 
 #nav-bar li {
