--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,5 +1,6 @@
 body {
 	font-family: Georgia, Serif;
+	background-image: url('http://static.travelblog.org/Wallpaper/pix/waterfall_desktop_background-1600x1200.jpg');
 }
 
 ul {
