--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div id="nav-bar">
+<div id="nav-bar" class="shadow">
 	<ul>
 		<li><a href="/">Denarri</a></li>
 		<li><a href="/about">About Us</a></li>
