--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -64,3 +64,14 @@ ul {
 		0px -1px 0px rgba(255,255,255,0.7),
 		0px 1px 0px rgba(255,255,255,0.3);
 }
+
+.arrow-up {
+	width: 0; 
+	height: 0; 
+	border-left: 18px solid transparent;
+	border-right: 18px solid transparent;
+	border-bottom: 15px solid white;
+	margin-top: -45px;
+	margin-left: 35px;
+	position: relative;
+}
