--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,10 +2,11 @@
 
 <div id='home-page' class='centered'>
 	<h1 id='home-page-header'>Denarri</h1>
-	<a href='#' class='button home-button shadow no-text-decoration'>Buy</a>
-	<a href='#' class='button home-button shadow no-text-decoration'>Sell</a>
-	<a href='#' class='button home-button shadow no-text-decoration'>Browse</a>
+	<a href='#' id='buy-btn' class='button home-button shadow no-text-decoration' target='_self'>Buy</a>
+	<a href='#' id='sell-btn' class='button home-button shadow no-text-decoration' target='_self'>Sell</a>
+	<a href='#' id='browse-btn' class='button home-button shadow no-text-decoration' target='_self'>Browse</a>
 	<form action="">
 		<input type="text" class="home-search shadow" name="search" value="" placeholder="enter search term here..." />
 	</form>
+	<div class='arrow-up'></div>
 </div>
