--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,6 @@
   <title>Denarri</title>
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
-  <%= javascript_include_tag params[:controller] %>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -27,9 +26,12 @@
 </div>
 
 <div id="content">
-
-	<p class="notice"><%= notice %></p>
-	<p class="alert"><%= alert %></p>
+	<% if notice %>
+		<p class="alert-box notice"><%= notice %></p>
+	<% end %>
+	<% if alert %>
+		<p class="alert-box alert"><%= alert %></p>
+	<% end %>
 
 	<%= yield %>
 
