more stuff with the search, alert callback

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -7,7 +7,7 @@
 	<a href='#' id='buy-btn' class='button home-button shadow' target='_self'>Buy</a>
 	<a href='#' id='sell-btn' class='button home-button shadow' target='_self'>Sell</a>
 	<a href='#' id='browse-btn' class='button home-button shadow' target='_self'>Browse</a>
-	<form action=''>
+	<form action='' onsubmit='search_submit()'>
 		<input type='text' id='home-page-search' class='shadow' name='search' placeholder='enter search term here...' data-search='buy' />
 	</form>
 	<div class='arrow-up'></div>
