backgrounds , fonts, everything else

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -13,14 +13,16 @@
 }
 
 #home-page-header {
+	color: white;
+	font-weight: 200;
 	text-align: center;
 	margin-right: 120px;
 	margin-bottom: 50px;
 }
 
 .button {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
+	font-family: Roboto, Helvetica, sans-serif;
+	font-size: 16px;
 	color: #000000;
 	padding: 10px 20px;
 	background: -moz-linear-gradient(
