--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<%= javascript_include_tag params[:controller] %>
+<script>
+	home.init();
+</script>
 
 <div id='home-page' class='centered'>
 	<h1 id='home-page-header'>Denarri.</h1>
