--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -55,3 +55,35 @@
 	-webkit-border-radius: 4px;
 	border-radius: 4px;
 }
+
+.about-page-header {
+	margin-left: 44%;
+	font-weight: 200;
+}
+
+#about-page-story {
+	padding-top: 350px;
+}
+
+#about-page-paragraph {
+	padding-left: 100px;
+	padding-right: 100px;
+}
+
+#about-neil {
+	padding-left: 70%;
+	text-align: center;
+	position: absolute;
+}
+
+#about-chris {
+	padding-left: 38.5%;
+	text-align: center;
+	position: absolute;
+}
+
+#about-andrew {
+	padding-left: 7%;
+	text-align: center;
+	position: absolute;
+}
