--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -5,11 +5,12 @@
 #home-page.centered {
   position: fixed;
   //top: 50%;
-  //left: 50%;
+  left: 50%;
   top: 30%;
-  left: 30%;
+  //left: 30%;
   //margin-top: -190px;
-  //margin-left: -275px;
+  margin-left: -285px;
+  width: 657px;
 }
 
 #home-page-header {
