--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,10 +28,16 @@
 
 <div id="content">
 	<% if notice %>
-		<p class="alert-box notice"><%= notice %></p>
+		<p class="alert-box notice">
+			<%= notice %>
+			<span class='pull-right close-alert-box'>x</span>
+		</p>
 	<% end %>
 	<% if alert %>
-		<p class="alert-box alert"><%= alert %></p>
+		<p class="alert-box alert">
+			<%= alert %>
+			<span class='pull-right close-alert-box'>x</span>
+		</p>
 	<% end %>
 
 	<%= yield %>
