--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,27 +3,39 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 #home-page.centered {
-  position: fixed;
-  //top: 50%;
-  left: 50%;
-  top: 30%;
-  //left: 30%;
-  //margin-top: -190px;
-  margin-left: -285px;
-  width: 657px;
+  width: 600px;
+  height: 200px;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin: auto;
+  padding: 50px;
 }
 
 #home-page-header {
 	color: white;
-	font-weight: 200;
 	text-align: center;
-	margin-right: 120px;
-	margin-bottom: 50px;
+	margin: 0 0 50px 0;
+}
+
+#buy-btn {
+	margin-right: 132px;
+}
+
+#sell-btn {
+	margin-right: 111px;
+}
+
+#browse-btn {
+	margin-right: 0;
 }
 
 .button {
 	font-family: Roboto, Helvetica, sans-serif;
 	font-size: 16px;
+	font-weight: 200;
 	color: #000000;
 	padding: 10px 20px;
 	background: -moz-linear-gradient(
@@ -42,12 +54,11 @@
 
 .home-button {
 	padding: 20px 40px 20px 40px;
-	margin-right: 100px;
 	text-decoration: none;
 }
 
 #home-page-search {
-	width: 83%;
+	width: 589px;
 	height: 30px;
 	margin-top: 50px;
 	padding-left: 10px;
@@ -59,7 +70,6 @@
 
 .about-page-header {
 	margin-left: 44%;
-	font-weight: 200;
 }
 
 #about-page-story {
@@ -67,24 +77,23 @@
 }
 
 #about-page-paragraph {
-	padding-left: 100px;
-	padding-right: 100px;
+	padding: 0 100px 0;
 }
 
 #about-neil {
-	padding-left: 70%;
+	padding: 0 100px 0 1030px;
 	text-align: center;
 	position: absolute;
 }
 
 #about-chris {
-	padding-left: 38.5%;
+	padding-left: 560px;
 	text-align: center;
 	position: absolute;
 }
 
 #about-andrew {
-	padding-left: 7%;
+	padding-left: 140px;
 	text-align: center;
 	position: absolute;
 }
