--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,19 +1,21 @@
 <div id="about-page">
 	<h1 class='about-page-header'>- The Team -</h1>
-	<div id='about-andrew'>
-		<img src='https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-frc1/228174_3667523611165_1972457188_n.jpg' height='250px'></img>
-		<p>Andrew Ghobrial<br />Stony Brook University - Economics<br />Co-Founder and CEO<br />Grand Theft Auto Historian</p>
-	</div>
-	<div id='about-chris'>
-		<img src='https://sphotos-b.xx.fbcdn.net/hphotos-prn2/9649_4941266929728_539085090_n.jpg' height='250px'></img>
-		<p>Chris Meseha<br />Johns Hopkins University - Computer Science<br />Co-Founder and President<br />Longboard Collector</p>
-	</div>
-	<div id='about-neil'>
-		<img src='https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-frc3/972074_10151693918361018_1067088856_n.jpg' height='250px'></img>
-		<p>Neil Mallinar<br />Johns Hopkins University - Computer Science/Physics<br />Co-Founder and CTO<br />Token Brown Guy</p>
+	<div id='the-team'>
+		<div id='about-andrew'>
+			<img src='https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-frc1/228174_3667523611165_1972457188_n.jpg' height='250px'></img>
+			<p>Andrew Ghobrial<br />Stony Brook University - Economics<br />Co-Founder and CEO<br />Grand Theft Auto Historian</p>
+		</div>
+		<div id='about-chris'>
+			<img src='https://sphotos-b.xx.fbcdn.net/hphotos-prn2/9649_4941266929728_539085090_n.jpg' height='250px'></img>
+			<p>Chris Meseha<br />Johns Hopkins University - Computer Science<br />Co-Founder and President<br />Longboard Collector</p>
+		</div>
+		<div id='about-neil'>
+			<img src='https://fbcdn-sphotos-a-a.akamaihd.net/hphotos-ak-frc3/972074_10151693918361018_1067088856_n.jpg' height='250px'></img>
+			<p>Neil Mallinar<br />Johns Hopkins University - Computer Science/Physics<br />Co-Founder and CTO<br />Token Brown Guy</p>
+		</div>
 	</div>
 	<div id='about-page-story'>
 		<h1 class='about-page-header'>- The Story -</h1>
-		<p id='about-page-paragraph'>"Denarri began as a casual conversation between two cousins about their frustrations with the state of e-commerce. If you wanted a really good deal, your best bet was to use an auction site, and this meant spending days keeping track of an item that you weren't even guaranteed to win. As a seller, you either had to risk selling your item for a less than stellar price, or put a reserve price and scare all your potential customers away. Chris then remembered spending much of his childhood playing an online role-playing game which included a marketplace with a much more seamless setup. You selected the item you wished to purchase, set a price range you’d be willing to pay, and waited for the market to automatically match you with a seller. No constant browsing, no auctions, no headache. The Denarius was the currency used in the Roman Empire, and helped form the foundation for modern commerce. We believe Denarri is the next evolution in commerce, and can’t wait for you to join us!"</p>
+		<p id='about-page-paragraph'>Denarri began as a casual conversation between two cousins about their frustrations with the state of e-commerce. If you wanted a really good deal, your best bet was to use an auction site, and this meant spending days keeping track of an item that you weren't even guaranteed to win. As a seller, you either had to risk selling your item for a less than stellar price, or put a reserve price and scare all your potential customers away. Chris then remembered spending much of his childhood playing an online role-playing game which included a marketplace with a much more seamless setup. You selected the item you wished to purchase, set a price range you’d be willing to pay, and waited for the market to automatically match you with a seller. No constant browsing, no auctions, no headache. The Denarius was the currency used in the Roman Empire, and helped form the foundation for modern commerce. We believe Denarri is the next evolution in commerce, and can’t wait for you to join us!</p>
 	</div>
 </div>
