--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,13 +2,20 @@
 		<%= link_to "Edit My Profile", edit_user_registration_path, id: 'edit-my-profile-link', class: 'pull-right' %>
 	<% end %>
 
-	<h1><%= full_name(@user) %>'s Profile</h1>
-	<h2><%= @user.email %></h2>
-	<h4>
-		<% if @user.admin? %>
-			This user is an admin!
-		<% else %>
-			This user is not an admin!
-		<% end %>
-	</h5>
-	<p> This is where user profiles will be </p>
+	<div class='left-third'>
+		<div id='profile-picture'>
+			<img src='blank.jpg' width='250px' height='250px'>
+		</div>
+		<h3 id='user-name'><%= full_name(@user) %>'s Profile</h3>
+		<h4 id='user-email'><%= @user.email %></h4>
+		<p><br />Reputation Score: 99% <br />Items Sold: 12<br />Location: Mountain View, CA</p>
+	</div>
+
+	<div class='right-two-thirds'>
+		<h4>Recent Feedback</h4>
+		<div id='recent-feedback' class='user-profile-well'>
+		</div>
+		<h4>Item Feed</h4>
+		<div id='item-feed' class='user-profile-well'>
+		</div>
+	</div>
