--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,4 +1,3 @@
-<h1 class='centered-text'> Sell Item	</h1>
 <%= form_for(@product) do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
@@ -18,11 +17,11 @@
 
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name, :value => @query %>
+    <%= f.text_field :name, :value => @product.name %>
   </div>
   <div class="field">
     <%= f.label :condition %><br>
-  	<%= f.select(:condition, options_for_select(['New', 'Used'])) %>
+    <%= f.select(:condition, options_for_select(['New', 'Used'], @product.condition)) %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
@@ -33,7 +32,7 @@
     $<%= f.number_field :shipping_cost, :placeholder => 10 %>
   </div>
   <div class="field">
-    <%= f.check_box :free_shipping %>
+    <%= f.check_box :free_shipping, :value => @product.free_shipping %>
     <%= f.label :free_shipping %>
   </div>
   <div class="field">
@@ -48,4 +47,3 @@
     <%= f.submit %>
   </div>
 <% end %>
-
