--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,9 @@
   <div><%= f.label :email %><br />
   <%= f.email_field :email %></div>
 
+  <div><%= f.label :time_zone %><br />
+  <%= f.time_zone_select(:time_zone, ActiveSupport::TimeZone.us_zones) %></div>
+
   <div><%= f.label :password %><br />
   <%= f.password_field :password %></div>
 
