removed all assets, will recompile in a minute

--- a/app/views/search/browse.html.erb
+++ b/app/views/search/browse.html.erb
@@ -1,1 +1,7 @@
 <h1 class='centered-text'>Browse: <%= @query %></h1>
+
+<% for product in @products %>
+	<ul>
+		<li><%= link_to product.name, product %></li>
+	</ul>
+<% end %>
