demonstrated scrollable wells in user profiles

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -1,3 +1,4 @@
+<h1 class='centered-text'> Sell Item  </h1>
 <%= form_for(@product) do |f| %>
   <% if @product.errors.any? %>
     <div id="error_explanation">
@@ -17,22 +18,22 @@
 
   <div class="field">
     <%= f.label :name %><br>
-    <%= f.text_field :name, :value => @product.name %>
+    <%= f.text_field :name, :value => @query %>
   </div>
   <div class="field">
     <%= f.label :condition %><br>
-    <%= f.select(:condition, options_for_select(['New', 'Used'], @product.condition)) %>
+    <%= f.select(:condition, options_for_select(['New', 'Used'])) %>
   </div>
   <div class="field">
     <%= f.label :price %><br>
     $<%= f.number_field :price, :placeholder => 100 %>
   </div>
   <div class="field">
-    <%= f.label :shipping_cost %><br>
+    <%= f.label :shipping_cost %><i> (If free put 0 and check below)</i><br>
     $<%= f.number_field :shipping_cost, :placeholder => 10 %>
   </div>
   <div class="field">
-    <%= f.check_box :free_shipping, :value => @product.free_shipping %>
+    <%= f.check_box :free_shipping %>
     <%= f.label :free_shipping %>
   </div>
   <div class="field">
@@ -40,8 +41,7 @@
     <%= f.text_area :description %>
   </div>
   <div class="field">
-    <%= f.label :post_date %><br>
-    <%= f.datetime_select :post_date, :ampm => true, :default => 0.days.from_now.in_time_zone(current_user.time_zone) %>
+    <%= f.date_select :post_date, :ampm => true, :default => 0.days.from_now.in_time_zone(current_user.time_zone), :discard_day => true, :discard_month => true, :discard_year => true %>
   </div>
   <div class="actions">
     <%= f.submit %>
