--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,6 @@
 body {
 	font-family: Roboto, Arial;
-	background-image: url("https://raw.github.com/ghobs91/Denarri/master/app/assets/images/low_contrast_linen.png");
+	background-image: url("https://raw.github.com/ghobs91/Denarri/master/app/assets/images/background.jpg");
 }
 
 ul {
