Made the html pages for the how it works pages. Will start/ finish the CSS for them tonight.

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -105,6 +105,10 @@
 	border-radius: 4px;
 }
 
+#about-us {
+	background-image: url("https://raw.github.com/ghobs91/Denarri/master/app/assets/images/low_contrast_linen.png");
+	}
+
 .about-page-header {
 	margin-left: 44%;
 }
