--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -44,12 +44,19 @@ ul {
 
 #nav-bar {
 	width: 100%;
-	font-size: 18px;
+	font-size: 16px;
 	background-color: white;
-	padding: 10px 15px 10px 7px;
+	padding: 5px 15px 7px 10px;
 	margin: -10px 0 0 -7px;
 	min-width: 680px;
 	text-decoration: none;
+	-moz-box-shadow:
+		0px 0px 10px 0px #000000;		
+	-webkit-box-shadow:
+		0px 0px 10px 0px #000000;		
+	box-shadow:
+		0px 0px 10px 0px #000000;
+		
 }
 
 #nav-bar li {
