--- a/app/views/pages/how_it_works.html.erb
+++ b/app/views/pages/how_it_works.html.erb
@@ -3,21 +3,21 @@
 </script>
 
 <div id='how-it-works'>
-	<h1 id='home-page-header'>How It Works</h1>
-	<a href="#" id='how-buy-btn' class='button home-button shadow' target='_self'>Buyer</a>
-	<a href="#" id='how-sell-btn' class='button home-button shadow' target='_self'>Seller</a>
-
+	<h1 id='how-page-header'>How It Works</h1>
+	<a href="#" id='buy-btn' class='button home-button shadow' target='_self'>Buyer</a>
+	<a href="#" id='sell-btn' class='button home-button shadow' target='_self'>Seller</a>
+   
 	<div id = 'how-buyer'>
 		<div id='search'>
-			<h1 id='search-header'>Search</h1>
+			<h1 id='search-header'><img src='https://raw.github.com/ghobs91/Denarri/master/app/assets/images/magnifying_glass_black.png' width = '75px' height='100px' class="align-right" />Search</h1>
 			<p id='search-paragraph'>Look for your item using keywords</p>
 		</div>
 		<div id='customize'> 
-			<h1 id='customize-header'>Customize</h1>
+			<h1 id='customize-header'><img src='https://raw.github.com/ghobs91/Denarri/master/app/assets/images/Sign-CheckBox01.png' width = '75px' height='75px' class="align-right" />Customize</h1>
 			<p id='customize-paragraph'>Pick a price range, whether you want it new or used, and even choose to be matched with only nearby sellers to get your item ASAP</p>
 		</div>
 		<div id='get-matched'>
-			<h1 id='get-matched-header'>Get Matched</h1>
+			<h1 id='get-matched-header'><img src='https://raw.github.com/ghobs91/Denarri/master/app/assets/images/handshake.png' width = '130px' height='130px' class="align-right" />Get Matched</h1>
 			<ul id='get-matched-paragraph'>
 				<li>-We do the rest!</li>
 				<li>-When we find the items that best fit your preferences, we will notify you.</li>
@@ -25,7 +25,7 @@
 			</ul>
 		</div>
 		<div id='enjoy'>
-			<h1 id='enjoy-header'>Enjoy Your New Item!</h1>
+			<h1 id='enjoy-header'><img src='https://raw.github.com/ghobs91/Denarri/master/app/assets/images/package.jpg' width = '130px' height='130px' class="align-right" />Enjoy Your New Item!</h1>
 			<ul id='enjoy-paragraph'>
 				<li>-The days of losing a week-long auction are finally over!</li>
 				<li>-With Denarri, there's no need to keep track of confusing auctions or browsing every day until you finally find someone selling what you want at the price you want.</li>
@@ -36,15 +36,15 @@
 
 	<div id = 'how-seller'>
 		<div id='search'>
-			<h1 id='search-header'>Search</h1>
+			<h1 id='search-header'><img src='https://raw.github.com/ghobs91/Denarri/master/app/assets/images/magnifying_glass_black.png' width = '75px' height='100px' class="align-right" />Search</h1>
 			<p id='search-paragraph'>Just type in your item's name and Denarri will autofill some fields to get you started.</p>
 		</div>
 		<div id='customize'> 
-			<h1 id='customize-header'>Tell Buyers about your Item</h1>
+			<h1 id='customize-header'><img src='https://raw.github.com/ghobs91/Denarri/master/app/assets/images/Sign-CheckBox01.png' width = '75px' height='75px' class="align-right" />Tell Buyers about your Item</h1>
 			<p id='customize-paragraph'>Simply pick your price, list any important info, upload some awesome pictures, and finally choose your shippping price. We think charging for things like item pictures is silly, so upload away!</p>
 		</div>
 		<div id='get-matched'>
-			<h1 id='get-matched-header'>Get Matched</h1>
+			<h1 id='get-matched-header'><img src='https://raw.github.com/ghobs91/Denarri/master/app/assets/images/handshake.png' width = '130px' height='130px' class="align-right" />Get Matched</h1>
 			<ul id='get-matched-paragraph'>
 				<li>-We'll match you with buyers who are looking for items like yours. </li>
 				<li>-If a buyer decides they want to purchase yours, we will notify you.</li>
@@ -52,7 +52,7 @@
 			</ul>
 		</div>
 		<div id='enjoy'>
-			<h1 id='enjoy-header'>Congrats on the Sale!</h1>
+			<h1 id='enjoy-header'><img src='https://raw.github.com/ghobs91/Denarri/master/app/assets/images/package.jpg' width = '130px' height='130px' class="align-right" />Congrats on the Sale!</h1>
 			<ul id='enjoy-paragraph'>
 				<li>-Because you pick your own price, you no longer have to worry about someone winning an auction at a lower price than what you had in mind.</li>
 				<li>-Here at Denarri, we believe that the seller deserves to get the most for their item, which is why listing is free of charge. We only collect a small (7%) fee on the final sale price.</li>
