Did the html for Browse Page, will fix soon

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,7 +10,7 @@
 	<h1 id='home-page-header'>A new way to buy and sell.</h1>
 	<a href='#' id='buy-btn' class='button home-button shadow' target='_self'>Buy</a>
 	<a href='#' id='sell-btn' class='button home-button shadow' target='_self'>Sell</a>
-	<a href='#' id='browse-btn' class='button home-button shadow' target='_self'>Browse</a>
+	<a href='browse.html' id='browse-btn' class='button home-button shadow' target='_self'>Browse</a>
 	<form id='home-page-search-form' action='buy' method='GET'>
 		<input type='text' id='home-page-search' class='shadow' name='query' placeholder='enter search term here...' data-search='buy' />
 	</form>
