Html for all mockups except 2 item confirmation pages, will finish with this and all CSS tomorrow, Neil is brown

--- a/app/views/search/browse.html.erb
+++ b/app/views/search/browse.html.erb
@@ -39,32 +39,32 @@
 			<h3> Condition</h3>
 			<label>
 			<input type="checkbox" name="new" checked="unchecked">
-				"New"
+				New
 			</label>
 			<br>
 			<label>
 			<input type ="checkbox" name="used" checked="unchecked">
-				"Used"
+				Used
 			</label>
 			<br>
 			<label>
 			<input type ="checkbox" name="barely-used" checked="unchecked">
-				"Barely Used"
+				Barely Used
 			</label>
 			<br>
 			<label>
 			<input type ="checkbox" name="moderately-used" checked="unchecked">
-				"Moderately used"
+				Moderately used
 			</label>
 			<br>
 			<label>
 			<input type ="checkbox" name="heavily-used" checked="unchecked">
-				"Heavily used"
+				Heavily used
 			</label>
 			<br>
 			<label>
 			<input type ="checkbox" name="refurbished" checked="unchecked">
-				"Refurbished"
+				Refurbished
 			</label>
 			<br>
 			<label class="title" for="distance">Distance</label>
