--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -10,16 +10,6 @@ body#home-page {
 	background-attachment: fixed;
 	background-position: center;
 	background-size: cover;
-
-body {
-	font-family: Roboto, Arial;
-	background-image: url("https://raw.github.com/ghobs91/Denarri/master/app/assets/images/low_contrast_linen.png");
-}
-
-body#home-page {
-	background-image: url("https://raw.github.com/ghobs91/Denarri/master/app/assets/images/background.jpg");
-	background-repeat: no-repeat;
-	background-attachment: fixed;
 }
 
 ul {
@@ -58,14 +48,14 @@ ul {
 }
 
 .centered-text {
-	text-align:	center;
+	text-align:center;
 }
 
 #nav-bar {
 	width: 100%;
 	font-size: 16px;
 	background-color: white;
-	padding: 5px 15px 7px 10px;
+	padding: 20px 15px 7px 10px;
 	margin: -10px 0 0 -7px;
 	min-width: 680px;
 	text-decoration: none;
@@ -74,14 +64,16 @@ ul {
 	-webkit-box-shadow:
 		0px 0px 15px 0px #000000;		
 	box-shadow:
-		0px 0px 15px 0px #000000;
-		
+		0px 0px 15px 0px #000000;	
 }
 
 
 
-#nav-bar li {
+
+#nav-bar li {	
 	display: inline;
+	margin-top: -18px;
+	float:left;
 	padding-right: 5px;
 	text-decoration: none;
 }
@@ -115,6 +107,7 @@ ul {
 #nav-bar a {	
 	text-decoration: none;
 	color: #000000;
+	padding-right:10px;
 }
 
 #nav-bar a:visited {
@@ -145,6 +138,5 @@ ul {
 	border-bottom: 15px solid white;
 	margin-top: -45px;
 	margin-left: 168px;
-	margin-left: 35px;
 	position: relative;
 }
