changes to the about us page

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -85,6 +85,30 @@
 	border-radius: 4px;
 }
 
+#about-page {
+	height: 100%;
+	color: black;
+}
+
+#about-page-headers {
+	height: 100%;
+	width: 17%;
+	float:left;
+	background-color:white;
+}
+
+#right-side {
+	width:83%;
+	float:left;
+}
+
+#the-team {
+	margin-top: 200px;
+	font-size: 36px;
+	padding-left: 30px;
+	padding-right: 30px;
+}
+
 
 #how-it-works {
 	font-family: Roboto, Helvetica, sans-serif;
