--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -7,7 +7,7 @@
 	<div id='about-andrew'>
 		<img src='andrew.jpg'>
 		<h1>Andrew Ghobrial</h1>
-		<p>Stonybrook University - Economics </p>
+		<p>Stony Brook University - Economics </p>
 		<p>Co-founder and CEO</p>
 	</div>
 
@@ -15,7 +15,7 @@
 		<img src='chris.jpg'>
 		<h1>Chris Meseha</h1>
 		<p>Johns Hopkins University - Computer Science </p>
-		<p>Co-founder and CTO</p>
+		<p>Co-founder, President and CTO</p>
 	</div>
 
 	<div id = 'the-story'>
