About done with CSS for about us and how it works pages

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -5,21 +5,23 @@
 	</div>
 <div id ='right-side'>
 	<div id='about-andrew'>
-		<img src='andrew.jpg'>
+		<img src='http://i.imgur.com/gVcam0E.jpg' class="align-left" width='175' height='175'>
 		<h1>Andrew Ghobrial</h1>
 		<p>Stony Brook University - Economics </p>
 		<p>Co-founder and CEO</p>
+		<a href="#"><img src='http://i.imgur.com/bXVBFzI.jpg' class='icon-links' </img> </a> <a href="#"><img src='http://i.imgur.com/LXmtbOl.png' class='icon-links' </img> </a> <a href="#"><img src='http://i.imgur.com/XvZOjdr.png' class='icon-links' </img> </a> <a href="#"><img src='http://i.imgur.com/UiDH5tw.png' class='icon-links' </img> </a>
 	</div>
 
 	<div id='about-chris'>
-		<img src='chris.jpg'>
+		<img src='http://i.imgur.com/R73hlzE.jpg' class="align-left" width='175' height='175'>
 		<h1>Chris Meseha</h1>
 		<p>Johns Hopkins University - Computer Science </p>
 		<p>Co-founder, President and CTO</p>
+		<a href="#"><img src='http://i.imgur.com/bXVBFzI.jpg' class='icon-links' </img> </a> <a href="#"><img src='http://i.imgur.com/LXmtbOl.png' class='icon-links' </img> </a> <a href="#"><img src='http://i.imgur.com/XvZOjdr.png' class='icon-links' </img> </a> <a href="#"><img src='http://i.imgur.com/UiDH5tw.png' class='icon-links' </img> </a>
 	</div>
 
 	<div id = 'the-story'>
-		<p>Denarri began as a casual conversation between two cousins about their frustrations with the state of e-commerce. If you wanted a really good deal, your best bet was to use an auction site, and this meant spending days keeping track of an item that you weren't even guaranteed to win. As a seller, you either had to risk selling your item for a less than stellar price, or put a reserve price and scare all your potential customers away. Chris then remembered spending much of his childhood playing an online role-playing game which included a marketplace with a much more seamless setup. You selected the item you wished to purchase, set a price range you'd be willing to pay, and waited for the market to automatically match you with a seller. No constant browsing, no auctions, no headache. We figured, why not have this for real-world products? The Denarius was the currency used in the Roman Empire, and helped form the foundation for modern commerce. We believe Denarri is the next evolution.</p>
+		<p class = "tab">Denarri began as a casual conversation between two cousins about their frustrations with the state of e-commerce. If you wanted a really good deal, your best bet was to use an auction site, and this meant spending days keeping track of an item that you weren't even guaranteed to win. As a seller, you either had to risk selling your item for a less than stellar price, or put a reserve price and scare all your potential customers away. Chris then remembered spending much of his childhood playing an online role-playing game which included a marketplace with a much more seamless setup. You selected the item you wished to purchase, set a price range you'd be willing to pay, and waited for the market to automatically match you with a seller. No constant browsing, no auctions, no headache. We figured, why not have this for real-world products? The Denarius was the currency used in the Roman Empire, and helped form the foundation for modern commerce. We believe Denarri is the next evolution.</p>
 	</div>
 </div>
 </div>
