--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1,6 +1,6 @@
 
 body {
-	font-family: "Raleway", Roboto, Sans-serif;
+	font-family: Raleway, Roboto, Sans-serif;
 	background-color: #edece8;
 }
 
